# ALBWS-Master

./: README.md
laser_control_plugin/: CMakeLists.txt  package.xml
laser_control_plugin/src/: laser_toggle_plugin.cpp
laser_pointer_plugin/: CMakeLists.txt  README.md  package.xml
laser_pointer_plugin/launch/: laser_pointer_demo.launch
laser_pointer_plugin/models/: laser_pointer.sdf
laser_pointer_plugin/src/: laser_pointer_plugin.cpp
laser_pointer_plugin/urdf/: laser_pointer.xacro
moveit_ur3/: CMakeLists.txt  package.xml
moveit_ur3/scripts/: collision.py  joint_states.py  move_ur3.py  weed_detector.py
realsense2_description/launch/: view_d415_model_rviz_gazebo.launch
realsense2_description/urdf/: _d415.urdf.xacro  _d435.gazebo.xacro  test_d415_camera.urdf.xacro
universal_robot/ur3_moveit_config/launch/: moveit_planning_execution.launch  sensor_manager.launch.xml
universal_robot/ur_gazebo/launch/: level_1.launch  level_2.launch  ur3_bringup.launch
universal_robot/ur_gazebo/launch/inc/: load_ur.launch.xml  ur_control.launch.xml
universal_robot/ur_gazebo/urdf/: my_ur3.xacro
universal_robot/ur_gazebo/worlds/: Level_1  level_1.world  level_2.world  my_custom_world.world  simple_world.world
virtual_maize_field/config/: fre22_task_navigation_mini.yaml
virtual_maize_field/models/: pot_resized.mtl
virtual_maize_field/models/Flowers001/: model.config  model.sdf
virtual_maize_field/models/Flowers001/materials/scripts/: Flor001.material
virtual_maize_field/models/grass/: model.sdf
virtual_maize_field/models/maize_01/meshes/: maize_01.dae
virtual_maize_field/models/plant_cluster/: model.config  model.sdf
virtual_maize_field/models/pot/: model.config  model.sdf
virtual_maize_field/models/pot/materials/scripts/: pot.material
virtual_maize_field/models/unknown_weed/: model.sdf
